--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title>AI DJ WEB APP</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+  <title>AI DJ WEB APP</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.js"></script>
 
@@ -13,17 +14,24 @@
 
   <link rel="stylesheet" type="text/css" href="style.css">
 
-</head>
-<body background="music.jpeg">
-<center>
-  	<h3 class="btn btn-warning heading">AI MUSIC WEB APP
-	    <br>
-	    <span class="note">NOTE - Move your left-hand wrist infront of the screen to play and move your right wrist infront of the screen to play</span>
-  	</h3>
-	<br><br>
-  <button class="btn btn-success" onclick="playMusic()" id="play">Song name</button>
-</center>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/addons/p5.sound.min.js"
+    integrity="sha512-WzkwpdWEMAY/W8WvP9KS2/VI6zkgejR4/KTxTl4qHx0utqeyVE0JY+S1DlMuxDChC7x0oXtk/ESji6a0lP/Tdg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-<script src="main.js"></script>
+</head>
+
+<body background="music.jpeg">
+  <center>
+    <h3 class="btn btn-warning heading">AI MUSIC WEB APP
+      <br>
+      <span class="note">NOTE - Move your left-hand wrist infront of the screen to play and move your right wrist
+        infront of the screen to play</span>
+    </h3>
+    <br><br>
+    <button class="btn btn-success" id="songName" style="font-size: 20px;">Song name</button>
+  </center>
+
+  <script src="main.js"></script>
 </body>
+
 </html>
